--- a/IMDBAnalyticsColab/IMDBAnalyticsColab_Workshop.ipynb
+++ b/IMDBAnalyticsColab/IMDBAnalyticsColab_Workshop.ipynb
@@ -913,7 +913,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "En nuestro proyecto se podria utilizar la analitica de datos para conocer a los usuarios de sus preferencias y gustos de los juegos\n",
+        "para tener un mejor uso del matchmaking y asi tener un buen uso de la aplicacion. ,"
+      ],
       "metadata": {
         "id": "5mz1G1DnkCUC"
       },
