--- a/IMDBAnalyticsColab/IMDBAnalyticsColab_Workshop.ipynb
+++ b/IMDBAnalyticsColab/IMDBAnalyticsColab_Workshop.ipynb
@@ -65,7 +65,7 @@
         "id": "jO_I6ahfDyd2",
         "outputId": "8d1989e0-74e4-4056-d741-7e5a00182860"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "gXDsfA6PCpms"
       },
@@ -202,7 +202,7 @@
         "id": "j1UQiTevGShR",
         "outputId": "b965a703-e35e-4ffc-8607-7b77df294c27"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -568,7 +568,7 @@
           "height": 295
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -625,7 +625,7 @@
           "height": 296
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -673,7 +673,7 @@
           "height": 962
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -751,7 +751,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -811,7 +811,7 @@
           "height": 508
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -862,7 +862,7 @@
           "height": 295
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -914,7 +914,7 @@
     {
       "cell_type": "code",
       "source": [
-        "En nuestro proyecto se podria utilizar la analitica de datos para conocer a los usuarios de sus preferencias y gustos de los juegos\n",
+        "En nuestro proyecto se podria utilizar la analitica de datos para conocer a los usuarios por medio de la informacion suministrada que son sus preferencias y gustos de los juegos\n",
         "para tener un mejor uso del matchmaking y asi tener un buen uso de la aplicacion. ,"
       ],
       "metadata": {
