--- a/IMDBAnalyticsColab/IMDBAnalyticsColab_Workshop.ipynb
+++ b/IMDBAnalyticsColab/IMDBAnalyticsColab_Workshop.ipynb
@@ -63,40 +63,36 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jO_I6ahfDyd2",
-        "outputId": "8d1989e0-74e4-4056-d741-7e5a00182860"
+        "outputId": "7c78ebc8-8981-453a-9a95-b53d0236bad3"
       },
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "--2023-03-02 18:53:29--  https://docs.google.com/uc?export=download&id=1osH_xhTCW4Qh7f00VU_UaRK5whEXe8dr\n",
-            "Resolving docs.google.com (docs.google.com)... 172.253.115.100, 172.253.115.138, 172.253.115.139, ...\n",
-            "Connecting to docs.google.com (docs.google.com)|172.253.115.100|:443... connected.\n",
+            "--2023-03-02 19:56:27--  https://docs.google.com/uc?export=download&id=1osH_xhTCW4Qh7f00VU_UaRK5whEXe8dr\n",
+            "Resolving docs.google.com (docs.google.com)... 142.251.163.100, 142.251.163.113, 142.251.163.101, ...\n",
+            "Connecting to docs.google.com (docs.google.com)|142.251.163.100|:443... connected.\n",
             "HTTP request sent, awaiting response... 303 See Other\n",
-            "Location: https://doc-14-6c-docs.googleusercontent.com/docs/securesc/ha0ro937gcuc7l7deffksulhg5h7mbp1/gnsjsfhe7snhjd55u2jvvmhbdd9oc3qc/1677783150000/15315348669826032119/*/1osH_xhTCW4Qh7f00VU_UaRK5whEXe8dr?e=download&uuid=5f1526ee-972a-4d6a-920b-ac2bd10953d4 [following]\n",
+            "Location: https://doc-14-6c-docs.googleusercontent.com/docs/securesc/ha0ro937gcuc7l7deffksulhg5h7mbp1/ud25c3hkod4uvnf5u4lvmpetralc3mit/1677786975000/15315348669826032119/*/1osH_xhTCW4Qh7f00VU_UaRK5whEXe8dr?e=download&uuid=5c2822fc-00a5-400b-afca-ff7919e5d5ee [following]\n",
             "Warning: wildcards not supported in HTTP.\n",
-            "--2023-03-02 18:53:30--  https://doc-14-6c-docs.googleusercontent.com/docs/securesc/ha0ro937gcuc7l7deffksulhg5h7mbp1/gnsjsfhe7snhjd55u2jvvmhbdd9oc3qc/1677783150000/15315348669826032119/*/1osH_xhTCW4Qh7f00VU_UaRK5whEXe8dr?e=download&uuid=5f1526ee-972a-4d6a-920b-ac2bd10953d4\n",
+            "--2023-03-02 19:56:28--  https://doc-14-6c-docs.googleusercontent.com/docs/securesc/ha0ro937gcuc7l7deffksulhg5h7mbp1/ud25c3hkod4uvnf5u4lvmpetralc3mit/1677786975000/15315348669826032119/*/1osH_xhTCW4Qh7f00VU_UaRK5whEXe8dr?e=download&uuid=5c2822fc-00a5-400b-afca-ff7919e5d5ee\n",
             "Resolving doc-14-6c-docs.googleusercontent.com (doc-14-6c-docs.googleusercontent.com)... 172.253.62.132, 2607:f8b0:4004:c07::84\n",
             "Connecting to doc-14-6c-docs.googleusercontent.com (doc-14-6c-docs.googleusercontent.com)|172.253.62.132|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 5477009 (5.2M) [application/x-zip-compressed]\n",
             "Saving to: ‘data’\n",
             "\n",
-            "data                100%[===================>]   5.22M  --.-KB/s    in 0.04s   \n",
+            "data                100%[===================>]   5.22M  --.-KB/s    in 0.02s   \n",
             "\n",
-            "2023-03-02 18:53:30 (128 MB/s) - ‘data’ saved [5477009/5477009]\n",
+            "2023-03-02 19:56:28 (230 MB/s) - ‘data’ saved [5477009/5477009]\n",
             "\n",
             "Archive:  /content/data\n",
-            "  inflating: /content/IMDBAnalyticsData/Data/Map/ne_10m_admin_0_countries.cpg  \n",
-            "  inflating: /content/IMDBAnalyticsData/Data/Map/ne_10m_admin_0_countries.prj  \n",
-            "  inflating: /content/IMDBAnalyticsData/Data/Map/ne_10m_admin_0_countries.VERSION.txt  \n",
-            "  inflating: /content/IMDBAnalyticsData/Data/Map/ne_10m_admin_0_countries.README.html  \n",
-            "  inflating: /content/IMDBAnalyticsData/Data/Map/ne_10m_admin_0_countries.shx  \n",
-            "  inflating: /content/IMDBAnalyticsData/Data/Map/ne_10m_admin_0_countries.dbf  \n",
-            "  inflating: /content/IMDBAnalyticsData/Data/Map/ne_10m_admin_0_countries.shp  \n",
-            "  inflating: /content/IMDBAnalyticsData/Data/movie_metadata.csv  \n"
+            "replace /content/IMDBAnalyticsData/Data/Map/ne_10m_admin_0_countries.cpg? [y]es, [n]o, [A]ll, [N]one, [r]ename: "
           ]
         }
       ]
@@ -892,7 +888,17 @@
     {
       "cell_type": "code",
       "source": [
-        "#Espacio para el código de la pregunta 7\n"
+        "#Espacio para el código de la pregunta 7\n",
+        "count_per_year = df.groupby('country')['imdb_score'].mean()\n",
+        "\n",
+        "\n",
+        "shpfile = 'IMDBAnalyticsData/Data/Map/ne_10m_admin_0_countries.shp'\n",
+        "world = gpd.read_file(shpfile)\n",
+        "imdb_by_country = df.groupby(\"country\")[\"imdb_score\"].mean().reset_index()\n",
+        "world_imdb = world.merge(imdb_by_country, left_on=\"NAME\", right_on=\"country\")\n",
+        "# Crear el mapa\n",
+        "ax = world_imdb.plot(column=\"imdb_score\", cmap=\"YlGnBu\", figsize=(15, 10), legend=True)\n",
+        "ax.set_title(\"IMDb Score Promedio por País\", fontsize=16)"
       ],
       "metadata": {
         "id": "cYPPaOARkAoi"
